# clinicaltrials-act-converter

./: .gitignore  README.md  clinicaltrials-credentials.json  create_instance.py  fdaaa-converter-log.conf  load_data.py  pyproject.toml  requirements.in  requirements.txt  setup.py  startup_script.sh
.github/workflows/: main.yml
ctconvert/: #create_instance.py#  __init__.py  bigquery.py  convert_data.py  create_instance.py  load_data.py  settings.py  startup_script.sh
ctconvert/tests/: test_convert_data.py  test_load_data.py
ctconvert/tests/fixtures/: expected_trials_json.json
tests/: test_load_data.py
